# ProjectGrowth

./: .gitignore  .mcp.json  .pre-commit-config.yaml
backend/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
backend/config/: brand_voice.yaml  settings.yaml
backend/data/fixtures/: README.md  ideas.json  performance_history.json
backend/growth_op_agent/: __init__.py  main.py  settings.py  supabase.py
backend/growth_op_agent/analytics/: __init__.py  follow_tracker.py  performance.py  weekly_review.py
backend/growth_op_agent/api/: __init__.py  app.py  helper.py  models.py  supabase_read.py
backend/growth_op_agent/brand/: __init__.py  brand_context.py  strategy_updater.py  voice_updater.py
backend/growth_op_agent/cli/: test_commands.py
backend/growth_op_agent/content/: __init__.py  calendar.py  idea_generator.py  idea_store.py
backend/growth_op_agent/data_sources/: __init__.py  aggregator.py  hackernews.py  performance.py  reddit.py  zenrows.py
backend/growth_op_agent/intelligence/: __init__.py  intelligence.py
backend/growth_op_agent/orchestrator/: orchestrator.py
backend/growth_op_agent/publishing/: __init__.py  scheduler.py
backend/my-skill/: SKILL.md
backend/scripts/: brand_config.sql  seed_supabase.py
backend/tests/: test_api.py  test_brand_context.py  test_follow_tracker.py  test_idea_store.py  test_intelligence_parsing.py  test_main_cli.py  test_performance_import_metadata.py  test_performance_snapshot.py  test_performance_source.py  test_seed_supabase.py  test_settings.py  test_supabase.py
frontend/: README.md  (+6 more)
(+31 files in other folders)
