[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "growth-op-agent"
version = "0.1.0"
description = "AI-powered social media growth agent using Claude as the intelligence layer"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "tweepy>=4.14.0", # read-only X API for own account analytics
    "beautifulsoup4>=4.12.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.12",
    "types-requests>=2.32.0",
]

[project.scripts]
growth-op = "growth_op_agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["growth_op_agent"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.12",
    "types-requests>=2.32.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
